--- a/index.html
+++ b/index.html
@@ -11,33 +11,22 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand">Navbar</a>
+              <a class="navbar-brand">Menu</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    <a class="nav-link active" aria-current="page" href="gallery.html">Gallery</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -47,10 +36,14 @@
 
     <main>
 
+      <img src="img/maxresdefault.jpg" alt="">
+
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit aliquam illo corrupti neque unde sapiente eaque culpa corporis magnam labore repudiandae error quis, saepe dolore provident ratione voluptates in suscipit molestiae recusandae? Necessitatibus sit vel facere ex non modi, ratione blanditiis rerum dolor, molestiae porro, nulla nesciunt nemo iusto animi voluptatum. Possimus inventore iure ad ipsam est. Ut optio perspiciatis vel quos rerum illo distinctio iure architecto. Quasi atque similique, natus eveniet dolores eum, eos labore doloribus at tenetur consequatur voluptatibus laboriosam voluptas perspiciatis ipsam sunt dolorem aliquid omnis. Laudantium officia porro iste assumenda necessitatibus eaque, vero reiciendis nihil maxime, vel, nobis facere deserunt temporibus. Quibusdam a laboriosam hic sunt ipsum! Quos iste facilis voluptatem in fuga quidem blanditiis, officiis non incidunt consectetur culpa odio quisquam accusantium nobis cumque reprehenderit. Maxime nemo consectetur id in iste itaque pariatur quam quae rerum nulla libero laborum at perspiciatis tempora, dolores provident! Explicabo eveniet labore, adipisci doloremque pariatur aliquid ratione dolor atque illum aperiam. Debitis officia ullam aliquid quam, temporibus assumenda at suscipit quos blanditiis in accusantium ad molestias laborum modi ex eligendi sunt porro atque nesciunt perspiciatis. Obcaecati, ratione quibusdam atque magni, similique qui commodi omnis ipsum dolorem corporis rem exercitationem quod?</p>
+
     </main>
 
     <footer>
-
+      <p>© DWWM 2022</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
