--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand">Menu</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,18 +40,22 @@
 
         <form action="">
 
-            <label class="test" >
+            <label class="formulaire" >
                 Nom
                 <input type="text">
             </label>
-            <label class="test">
+            <label class="formulaire">
                 Email
                 <input type="email">
             </label>
-            <label class="test">
+            <label class="formulaire">
                 Texte complémentaire
                 <textarea></textarea>
             </label>
+            <div class="bouton">           
+                 <button type="submit">SEND</button>
+            </div>
+
 
 
         </form>
