--- a/gallery.html
+++ b/gallery.html
@@ -35,10 +35,13 @@
     </header>
 
     <main>
-
-        <img src="img/pexels-karolina-grabowska-5208871.jpg" alt="" style="height: 250px;">
+        <div class="imagenul">
+            <img src="img/pexels-karolina-grabowska-5208871.jpg" alt="" style="height: 250px;">
+        </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque velit rem repellendus placeat veritatis? Consequuntur alias velit nulla cum fugiat numquam earum harum eveniet perspiciatis nesciunt, optio cupiditate quae possimus.</p>
-        <img src="img/pexels-mister-mister-2442888.jpg" alt="" style="height: 250px;">
+        <div class="imagenul">
+            <img src="img/pexels-mister-mister-2442888.jpg" alt="" style="height: 250px;">
+        </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad vitae dolores omnis molestias, numquam similique optio quia. Odio eos saepe, sequi delectus nulla ipsum cum, excepturi neque, ratione esse expedita.</p>
 
     </main>
