--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="gallery.html">Gallery</a>
+                    <a class="nav-link" aria-current="page" href="gallery.html">Gallery</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+                    <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
