--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="icon" href="img/portfolio.png">
+    <script src="https://kit.fontawesome.com/c3177cca73.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -59,17 +60,19 @@
                  <button type="submit">SEND</button>
             </div>
 
-
-
         </form>
-
-
-
-
 
     </main>
 
-    <footer id="contact">
+    <footer>
+      <p>
+        <ul>
+          <il><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter" ></i>Twitter</a></il>
+          <il><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a></il>
+          <il><a href="https://fr.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></il>
+        </ul>
+      </p>
+
       <p>© DWWM 2022</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
