--- a/gallery.html
+++ b/gallery.html
@@ -1,62 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="icon" href="img/portfolio.png">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="icon" href="img/portfolio.png">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://kit.fontawesome.com/c3177cca73.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <div class="container-fluid">
-              <div class="logo">
-                <img  src="img/portfolio.png" alt="">
-              </div>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="gallery.html">Gallery</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
-
-    <main>
-        <div class="imagenul">
-            <img data-aos="zoom-in" src="img/pexels-karolina-grabowska-5208871.jpg">
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="container-fluid">
+        <div class="logo">
+          <img src="img/portfolio.png" alt="">
         </div>
-        <p style="text-align:center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque velit rem repellendus placeat veritatis? Consequuntur alias velit nulla cum fugiat numquam earum harum eveniet perspiciatis nesciunt, optio cupiditate quae possimus.</p>
-        <div class="imagenul">
-            <img data-aos="zoom-in" src="img/pexels-mister-mister-2442888.jpg">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
+            </li>
+          </ul>
         </div>
-        <p style="text-align:center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad vitae dolores omnis molestias, numquam similique optio quia. Odio eos saepe, sequi delectus nulla ipsum cum, excepturi neque, ratione esse expedita.</p>
+      </div>
+    </nav>
+  </header>
 
-    </main>
+  <main id="maingallery">
+    <div class="spaceimgtext">
+      <div class="imgtext">
+        <img data-aos="zoom-in" src="img/pexels-karolina-grabowska-5208871.jpg">
+        <p class="textenul">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque velit rem repellendus
+          placeat veritatis? Consequuntur alias velit nulla cum fugiat numquam earum harum eveniet perspiciatis
+          nesciunt, optio cupiditate quae possimus.</p>
+      </div>
+    </div>
 
-    <footer>
-      <p>© DWWM 2022</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script>
-        AOS.init();
-      </script>
+    <div class="spaceimgtext">
+      <div class="imgtext">
+        <img data-aos="zoom-in" src="img/pexels-mister-mister-2442888.jpg">
+        <p class="textenul">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad vitae dolores omnis molestias,
+          numquam similique optio quia. Odio eos saepe, sequi delectus nulla ipsum cum, excepturi neque, ratione esse
+          expedita.</p>
+      </div>
+    </div>
+
+    <div class="spaceimgtext">
+      <div class="imgtext">
+        <img data-aos="zoom-in" src="img/pexels-mr-mockup-12025430.jpg">
+        <p class="textenul">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus rerum debitis pariatur
+          nam voluptate veniam, autem harum error earum unde officia, exercitationem vero nemo quae modi nulla quisquam
+          magnam quaerat?</p>
+      </div>
+    </div>
+
+    <div class="spaceimgtext">
+      <div class="imgtext">
+        <img data-aos="zoom-in" src="img/pexels-kindel-media-8212224.jpg">
+        <p class="textenul">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab accusantium qui labore
+          doloribus fugit, vero reprehenderit aperiam in assumenda corrupti debitis necessitatibus libero est delectus
+          culpa facere. Suscipit, neque quia!</p>
+      </div>
+    </div>
+
+    <div class="spaceimgtext">
+      <div class="imgtext">
+        <img data-aos="zoom-in" src="img/pexels-arturo-añez-14530730.jpg">
+        <p class="textenul">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente eius ex totam itaque
+          quidem, iste, impedit minima qui delectus cupiditate a quaerat eos nostrum dolorum voluptatum? Nisi
+          perferendis recusandae necessitatibus.</p>
+      </div>
+    </div>
+
+
+
+  </main>
+
+  <footer>
+    <p>
+    <ul>
+      <il><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i>Twitter</a></il>
+      <il><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a></il>
+      <il><a href="https://fr.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></il>
+    </ul>
+    </p>
+
+    <p>© DWWM 2022</p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
+
 </html>
