--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="icon" href="img/portfolio.png">
+    <script src="https://kit.fontawesome.com/c3177cca73.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -37,15 +38,23 @@
           </nav>
     </header>
 
-    <main>
+    <main id="mainindex">
 
-      <img src="img/maxresdefault.jpg" alt="">
+      <img src="img/maxresdefault.jpg">
 
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit aliquam illo corrupti neque unde sapiente eaque culpa corporis magnam labore repudiandae error quis, saepe dolore provident ratione voluptates in suscipit molestiae recusandae? Necessitatibus sit vel facere ex non modi, ratione blanditiis rerum dolor, molestiae porro, nulla nesciunt nemo iusto animi voluptatum. Possimus inventore iure ad ipsam est. Ut optio perspiciatis vel quos rerum illo distinctio iure architecto. Quasi atque similique, natus eveniet dolores eum, eos labore doloribus at tenetur consequatur voluptatibus laboriosam voluptas perspiciatis ipsam sunt dolorem aliquid omnis. Laudantium officia porro iste assumenda necessitatibus eaque, vero reiciendis nihil maxime, vel, nobis facere deserunt temporibus. Quibusdam a laboriosam hic sunt ipsum! Quos iste facilis voluptatem in fuga quidem blanditiis, officiis non incidunt consectetur culpa odio quisquam accusantium nobis cumque reprehenderit. Maxime nemo consectetur id in iste itaque pariatur quam quae rerum nulla libero laborum at perspiciatis tempora, dolores provident! Explicabo eveniet labore, adipisci doloremque pariatur aliquid ratione dolor atque illum aperiam. Debitis officia ullam aliquid quam, temporibus assumenda at suscipit quos blanditiis in accusantium ad molestias laborum modi ex eligendi sunt porro atque nesciunt perspiciatis. Obcaecati, ratione quibusdam atque magni, similique qui commodi omnis ipsum dolorem corporis rem exercitationem quod?</p>
+      <p class="textepasnul">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit aliquam illo corrupti neque unde sapiente eaque culpa corporis magnam labore repudiandae error quis, saepe dolore provident ratione voluptates in suscipit molestiae recusandae? Necessitatibus sit vel facere ex non modi, ratione blanditiis rerum dolor, molestiae porro, nulla nesciunt nemo iusto animi voluptatum. Possimus inventore iure ad ipsam est. Ut optio perspiciatis vel quos rerum illo distinctio iure architecto. Quasi atque similique, natus eveniet dolores eum, eos labore doloribus at tenetur consequatur voluptatibus laboriosam voluptas perspiciatis ipsam sunt dolorem aliquid omnis. Laudantium officia porro iste assumenda necessitatibus eaque, vero reiciendis nihil maxime, vel, nobis facere deserunt temporibus. Quibusdam a laboriosam hic sunt ipsum! Quos iste facilis voluptatem in fuga quidem blanditiis, officiis non incidunt consectetur culpa odio quisquam accusantium nobis cumque reprehenderit. Maxime nemo consectetur id in iste itaque pariatur quam quae rerum nulla libero laborum at perspiciatis tempora, dolores provident! Explicabo eveniet labore, adipisci doloremque pariatur aliquid ratione dolor atque illum aperiam. Debitis officia ullam aliquid quam, temporibus assumenda at suscipit quos blanditiis in accusantium ad molestias laborum modi ex eligendi sunt porro atque nesciunt perspiciatis. Obcaecati, ratione quibusdam atque magni, similique qui commodi omnis ipsum dolorem corporis rem exercitationem quod?</p>
 
     </main>
 
-    <footer>
+    <footer id="footerindex">
+      <p>
+        <ul>
+          <il><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter" ></i>Twitter</a></il>
+          <il><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a></il>
+          <il><a href="https://fr.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></il>
+        </ul>
+      </p>
+
       <p>© DWWM 2022</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
