--- a/gallery.html
+++ b/gallery.html
@@ -95,13 +95,10 @@
   </main>
 
   <footer>
-    <p>
-    <ul>
-      <il><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i>Twitter</a></il>
-      <il><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a></il>
-      <il><a href="https://fr.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></il>
-    </ul>
-    </p>
+    
+    <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i>Twitter</a>
+    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
+    <a href="https://fr.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
 
     <p>© DWWM 2022</p>
   </footer>
