--- a/contact.html
+++ b/contact.html
@@ -65,15 +65,11 @@
     </main>
 
     <footer>
-      <p>
-        <ul>
-          <il><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter" ></i>Twitter</a></il>
-          <il><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a></il>
-          <il><a href="https://fr.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></il>
-        </ul>
-      </p>
+        <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i>Twitter</a>
+        <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
+        <a href="https://fr.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a> 
+        <p class="pdp">© DWWM 2022</p>
 
-      <p>© DWWM 2022</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
